--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: Fluttergram
-description: A new Flutter application.
+name: Oba
+description: Oba Boba
 version: 1.2.3+1
 
 dependencies:
@@ -21,60 +21,26 @@ dependencies:
   location: ^2.3.5
   geocoder: ^0.2.1
   flare_flutter: ^1.8.3
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  provider:
   cupertino_icons: ^0.1.3
+  enhanced_future_builder:
 
 #dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
+#    flutter_test:
+#      sdk: flutter
+#    build_runner: ^1.0.0
+#    json_serializable: ^2.0.0
+#    google_sign_in: ^4.0.7
 
-
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   fonts:
   - family: Billabong
     fonts:
     - asset: assets/fonts/Billabong.ttf
   assets:
-  - assets/images/google_signin_button.png
-  - assets/flare/Like.flr
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  - assets/
+  - assets/logos/
+  - assets/images/
+  - assets/flare/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.io/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.io/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.io/custom-fonts/#from-packages
